--- a/shibboleth-web/src/main/java/nostr/si4n6r/shibboleth/web/LoginPage.html
+++ b/shibboleth-web/src/main/java/nostr/si4n6r/shibboleth/web/LoginPage.html
@@ -11,7 +11,7 @@
 <div id="hd">
     <div id="logo">
         <img src="logo.png" width="50px" height="50px" alt="Wicket Logo"/>
-        <h1>Cyclops</h1>
+        <h1>Shibboleth</h1>
     </div>
 </div>
 <div id="bd">
