--- a/shibboleth-web/src/main/java/nostr/si4n6r/shibboleth/web/LoginPage.html
+++ b/shibboleth-web/src/main/java/nostr/si4n6r/shibboleth/web/LoginPage.html
@@ -28,7 +28,7 @@
             <br/>
             <span>Password:</span>
             <input wicket:id="password" type="password" id="password"/>
-            <input wicket:id="app" type="text" id="app" type="hidden" />
+            <input wicket:id="app" id="app" type="hidden" />
             <p>
                 <input type="submit" name="Login" value="Login"/>
             </p>
